--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true  // 启用 multiDexEnable 分包编译,解除64K限制
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -16,14 +17,60 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    sourceSets {
+        main {
+            res.srcDirs = [
+                    'src/main/res-home',
+                    'src/main/res-tools',
+                    'src/main/res'
+            ]
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:multidex:1.0.1'
+    // Dagger dependencies
+    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    api 'com.google.dagger:dagger:2.16'
+    api 'com.google.dagger:dagger-android:2.16'
+    api 'com.google.dagger:dagger-android-support:2.16'
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
+    //retrofit2、okhttp
+    api 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    api 'me.jessyan:retrofit-url-manager:1.4.0'
+    //fragmentation
+    api 'me.yokeyword:fragmentation:1.1.9'
+    api 'me.yokeyword:fragmentation-swipeback:1.1.9'
+    //butterknife
+    api 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //glide
+    api 'com.github.bumptech.glide:glide:4.0.0'
+    //bugly
+    api 'com.tencent.bugly:crashreport:latest.release'
+    //lottie
+    api 'com.airbnb.android:lottie:2.3.0'
+    //logger
+    api 'com.orhanobut:logger:2.1.1'
+    //easypermissions
+    api 'pub.devrel:easypermissions:1.0.1'
+    //适配器
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 }
