--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
     //banner
     api 'com.youth.banner:banner:1.4.10'
+    //rxjava2
+    api 'io.reactivex.rxjava2:rxjava:2.0.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
