--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     //rxjava2
     api 'io.reactivex.rxjava2:rxjava:2.0.2'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //PictureSelector
+    api 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
 }
