--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
         <activity
             android:name=".ui.common.LineActivity"
             android:screenOrientation="portrait" />
+        <!--自定义view-->
+        <activity
+            android:name=".ui.common.CustomViewActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
